# lighthousetools

./: .dockerignore  .env.example  .gitignore  Dicionário de Dados - PRIO Expansion Compressors v0.xlsx  Dockerfile  README.md  change_status_models.py  clients.example.json  config.py  criar_template_prio.py  data_processor.py  default_attributes.json  dictionaries.py  export_to_sqlite.py  id_templates_del.txt  iniciar.bat  items.py  setup.bat  start-dev.bat  templates.py  utils.py  verify_enrollment.py  verify_items.py
API ref/: api_ref.txt
Lighthouse/: pyproject.toml  setup.py
Lighthouse/lighthouse/: __init__.py
app/: IA_Demo_Day_OnePager.pptx  IA_Demo_Day_OnePager_filled.pptx  README.md  db.py  db_lighthouse.py  main.py  sync.py  users.db
app/pages/: biblioteca.py  dicionario.py  explorador.py  modelos.py  sincronizacao.py  templates.py
backend/: auth.py  config.py  connections.py  main.py  requirements.txt
backend/routers/: auth_router.py  dictionary.py  environments.py  explorer.py  library.py  models.py  sync_router.py  templates.py  users.py
examples/: Dicionário de Dados - PRIO Expansion - Válvulas de Controle.xlsx  data_dictionary_{cliente}_{asset_family}_Rev{x}.xlsx
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
other_scripts/: audit_health_score.py  delete_template_attributes.py  delete_templates.py  enroll_default_attrs_all_templates.py  export_models_and_attributes.py  get_template_attribute_ids.py  update_item_categories_jirau.py
tests/: conftest.py  test_data_processor.py  test_templates.py  test_utils.py
(+18 files in other folders)
