[project]
name = "lighthouse"
version = "0.1.0"
authors = [
    { name = "Breno Robazza", email = "breno.robazza@shapedigital.com" },
]
description = "Lighthouse API Client"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.25.1",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]